# kerl

./: IOTA-Kerl-spec.md  README.md
java/: Kerl.java  KerlTest.java
javascript/: kerl.js  package.json
javascript/test/: collide.js  kerl.absorb-multi-squeeze.js  kerl.absorb-squeeze.js  kerl.multi-absorb-multi-squeeze.js
php/: Readme.md  conv.php  kerl.php  test.php
python2/: pykerl.py  pykerl_testing.py
python3/: conv.py  py3kerl.py  test.py
rust/: Cargo.toml
rust/src/: curl.rs  lib.rs
