[package]
name = "iota-kerl-cpu"
version = "0.1.0"
authors = ["Paul D Handy <paul@pauldhandy.com>",
           "Andreas C. Osowski <andreas@osowski.de>"]
keywords = ["no_std"]

[features]
default = []

[dependencies]
iota-trytes = { git = "https://github.com/iotaledger/iota.rs" }

[dev-dependencies.iota-trytes]
git = "https://github.com/iotaledger/iota.rs"
features = ["alloc"]

[dev-dependencies.rand]
version = "*"
